<resources>
    <string name="app_name">Registration Form</string>
    <string name="str_tv_title">Register</string>
    <string name="str_edtxt_username">Username</string>
    <string name="st_edtxt_password">Password</string>
    <string name="str_tv_gender">Gender</string>
    <string name="str_rb_male">"Male "</string>
    <string name="str_rb_female">"Female "</string>
    <string name="str_rb_other">"Other "</string>
    <string name="str_swtch_agree">"<![CDATA[Agree to the terms & conditions]]> "</string>
    <string name="str_btn_confirm">Confirm</string>
    <string name="str_btn_send">Send</string>
</resources>
